plugins {
  id 'application'
  id 'checkstyle'
  id 'jacoco'
  id 'java'
  id 'io.freefair.lombok' version '8.14.4'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.16'
  id 'com.github.kt3k.coveralls' version '2.12.2'
  id 'com.github.ben-manes.versions' version '0.60.0'
  id 'org.sonarqube' version '5.1.0.4882'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'org.owasp.dependencycheck' version '12.2.2'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

testing {
  suites {
    test {
      useJUnitJupiter()
    }
    functionalTest(JvmTestSuite) {
      dependencies { implementation project() }
    }
    integrationTest(JvmTestSuite) {
      dependencies { implementation project() }
      targets { all { testTask.configure { failFast = true } } }
    }
    smokeTest(JvmTestSuite) {
      dependencies { implementation project() }
    }
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked"
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()
  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.register('functional') { dependsOn functionalTest }
tasks.register('integration') { dependsOn integrationTest }
tasks.register('smoke') { dependsOn smokeTest }

tasks.register('fortifyScan', JavaExec) {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += testing.suites.test.sources.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
  ignoreExitValue = true
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.9.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

jacocoTestReport {
  executionData(tasks.named('test').get(), tasks.named('integrationTest').get())
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml")
  }
}

project.tasks.named('sonarqube') {
  dependsOn jacocoTestReport
}

project.tasks.named('check') {
  dependsOn integrationTest
}

sonarqube {
  properties {
    property "sonar.organization", "hmcts"
    property "sonar.projectName", "sscs-ccd-case-migration"
    property "sonar.projectKey", "sscs-ccd-case-migration"
    property "sonar.exclusions",
      """
            **/exception/*.java,**/hmc/*.java,
            **/domain/*.java,**/common/*.java,
            **/migration/auth/AuthTokenGeneratorConfiguration.java,
            **/migration/CaseMigrationRunner.java,
            **/migration/MigrationDataEncoderApp.java,
            **/config/HttpMessageConverterConfiguration.java,
            **/config/MigrationConfiguration.java
            """
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
  }
}

dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection ->
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

apply from: './gradle/suppress.gradle'
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

ext {
  powermockVersion = '2.0.9'
  springCloudVersion = '2025.1.2'
  restassuredVersion = '5.5.7'
  // CVE-2026-54515
  set('jackson-bom.version', '2.21.5')
  set('log4j2.version', '2.26.1')
  set('commons-lang3.version', '3.20.0')
  set('spring-framework.version', '6.2.19')
  set('spring-security.version', '6.5.11')
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }

  dependencies {
    // CVE-2026-63144, CVE-2026-63263
    dependency 'org.elasticsearch:elasticsearch:8.19.19'

    // CVE-2026-54399, CVE-2026-54428
    dependencySet(group: 'org.apache.httpcomponents.core5', version: '5.4.3') {
      entry 'httpcore5'
      entry 'httpcore5-h2'
    }
  }
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.boot:spring-boot-starter-json'
  implementation 'org.springframework:spring-context-support'
  implementation 'org.springframework.retry:spring-retry'
  implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
  implementation 'org.springframework.security:spring-security-oauth2-resource-server'
  implementation 'org.springframework.security:spring-security-oauth2-client'
  implementation 'org.springframework.security:spring-security-oauth2-jose'
  implementation 'org.springframework.security:spring-security-oauth2-core'
  implementation 'org.springframework.security:spring-security-config'

  implementation 'com.github.hmcts:idam-java-client:3.0.5'
  implementation 'com.github.hmcts:service-auth-provider-java-client:5.3.5'
  implementation 'com.github.hmcts:core-case-data-store-client:5.3.0'
  implementation 'com.github.hmcts.java-logging:logging:8.0.0'
  implementation 'com.github.hmcts:sscs-common:6.3.58'

  implementation 'org.json:json:20260522'
  implementation 'io.github.openfeign:feign-jackson:13.13'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
  implementation 'com.fasterxml.jackson.core:jackson-core'
  implementation 'com.fasterxml.jackson.core:jackson-databind'
  implementation 'com.fasterxml.jackson.core:jackson-annotations'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'

  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.9.0'
  implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
  implementation 'commons-fileupload:commons-fileupload:1.6.0'
  implementation 'commons-io:commons-io:2.22.0'


  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.wiremock.integrations:wiremock-spring-boot:3.10.6'
  testImplementation "io.rest-assured:rest-assured:${restassuredVersion}"
  testImplementation "io.rest-assured:xml-path:${restassuredVersion}"
  testImplementation "io.rest-assured:json-path:${restassuredVersion}"
  testImplementation 'org.mockito:mockito-junit-jupiter'

  testImplementation "org.powermock:powermock-api-mockito2:${powermockVersion}"
  testImplementation "org.powermock:powermock-module-junit4:${powermockVersion}"
  testImplementation 'com.github.hmcts:fortify-client:1.4.10:all'
}

application {
  mainClass.set('uk.gov.hmcts.reform.migration.CaseMigrationRunner')
}

bootJar {
  archiveFileName = 'sscs-ccd-case-migration.jar'
  archiveBaseName = 'sscs-ccd-case-migration'
  archiveVersion = project.version.toString()
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}

configurations.configureEach {
  exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
  exclude group: 'org.springframework.boot', module: 'spring-boot-starter-security'
  exclude group: 'org.springframework.security', module: 'spring-security-rsa'
}

test {
  failFast = false
  timeout = Duration.ofMinutes(30)
  environment("AZURE_APPLICATIONINSIGHTS_INSTRUMENTATIONKEY", "some-key")
  systemProperty 'java.locale.providers', 'COMPAT'

  testLogging {
    events "failed"
    exceptionFormat "short"

    debug {
      events "passed", "started", "skipped", "failed"
      exceptionFormat "full"
    }
    info.events = ["failed", "skipped"]
  }

  reports {
    html.required = true
  }

  jvmArgs = [
    '--add-modules', 'java.se',
    '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
    '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
    '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
    '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
    '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
  ]
}
